--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -9,15 +9,19 @@ hostname ISP1
 #Portok
 int Se0/2/0
 ip add 200.200.200.5 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/2/1
 ip add 200.200.200.1 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/3/0
 ip add 20.0.0.1 255.255.255.240
+ip ospf message-digest-key 1 md5 isp
 no sh
 int g0/0
 ip add 221.234.147.241 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 exit
 
@@ -30,6 +34,7 @@ network 20.0.0.0 0.0.0.15 area 0
 auto-cost reference-bandwidth 1000
 passive-interface Se0/3/0
 passive-interface g0/0
+area 0 authentication message-digest
 exit
 
 
@@ -44,15 +49,19 @@ hostname ISP2
 #Portok
 int Se0/2/0
 ip add 200.200.200.9 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/2/1
 ip add 200.200.200.2 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/3/0
 ip add 30.0.0.1 255.255.255.240
+ip ospf message-digest-key 1 md5 isp
 no sh
 int g0/0
 ip add 111.111.111.1 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 exit
 
@@ -65,6 +74,7 @@ network 30.0.0.0 0.0.0.15 area 0
 auto-cost reference-bandwidth 1000
 passive-interface Se0/3/0
 passive-interface g0/0
+area 0 authentication message-digest
 exit
 
 
@@ -80,12 +90,15 @@ hostname ISP3
 #Portok
 int Se0/2/0
 ip add 200.200.200.6 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/2/1
 ip add 200.200.200.10 255.255.255.252
+ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/3/0
 ip add 40.0.0.0 255.255.255.240
+ip ospf message-digest-key 1 md5 isp
 no sh
 exit
 
@@ -96,6 +109,7 @@ network 200.200.200.8 0.0.0.3 area 0
 network 40.0.0.0 0.0.0.15 area 0
 auto-cost reference-bandwidth 1000
 passive-interface Se0/3/0
+area 0 authentication message-digest
 exit
 
 
@@ -110,12 +124,15 @@ hostname SITE1x0
 #Portok
 int Se0/3/0
 ip add 40.0.0.2 255.255.255.240
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/0
 ip add 192.168.1.241 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1
 ip add 192.168.1.249 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 exit
 
@@ -126,6 +143,7 @@ network 192.168.1.240 0.0.0.3 area 0
 network 192.168.1.248 0.0.0.3 area 0
 default-information originate
 auto-cost reference-bandwidth 1000
+area 0 authentication message-digest
 exit
 ip route 0.0.0.0 0.0.0.0 40.0.0.1
 
@@ -142,14 +160,17 @@ hostname SITE1x1
 #Portok
 int g0/0
 ip add 192.168.1.245 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/2
 ip add 192.168.1.242 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 exit
 
 #HSRP
 int g0/1
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1.10
 encapsulation dot1q 10
@@ -198,6 +219,7 @@ passive-interface gig0/1.30
 passive-interface gig0/1.40
 passive-interface gig0/1.2
 passive-interface gig0/1.3
+area 0 authentication message-digest
 auto-cost reference-bandwidth 1000
 exit
 
@@ -212,14 +234,17 @@ hostname SITE1x2
 #Portok
 int g0/0
 ip add 192.168.1.246 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/2
 ip add 192.168.1.250 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 exit
 
 #HSRP
 int g0/1
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1.10
 encapsulation dot1q 10
@@ -269,6 +294,7 @@ passive-interface gig0/1.40
 passive-interface gig0/1.2
 passive-interface gig0/1.3
 auto-cost reference-bandwidth 1000
+area 0 authentication message-digest
 exit
 
 
@@ -286,12 +312,15 @@ do wr
 #Portok
 int Se0/3/0
 ip add 20.0.0.2 255.255.255.240
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/0
 ip add 192.168.2.241 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1
 ip add 192.168.2.245 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 
 
@@ -301,6 +330,7 @@ network 192.168.2.240 0.0.0.3 area 0
 network 192.168.2.244 0.0.0.3 area 0
 default-information originate
 auto-cost reference-bandwidth 1000
+area 0 authentication message-digest
 exit
 ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
@@ -315,13 +345,16 @@ hostname SITE2x1
 #Portok
 int g0/0
 ip add 192.168.2.249 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/2
 ip add 192.168.2.242 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 
 #HSRP
 int g0/1
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1.50
 encapsulation dot1q 50
@@ -352,6 +385,7 @@ passive-interface gig0/1.50
 passive-interface gig0/1.60
 passive-interface gig0/1.70
 auto-cost reference-bandwidth 1000
+area 0 authentication message-digest
 exit
 
 
@@ -363,15 +397,18 @@ hostname SITE2x2
 #Portok
 int g0/0
 ip add 192.168.2.250 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/1
 ip add 192.168.2.246 255.255.255.252
+ip ospf message-digest-key 1 md5 cisco
 no sh
 exit
 
 
 #HSRP
 int g0/2
+ip ospf message-digest-key 1 md5 cisco
 no sh
 int g0/2.50
 encapsulation dot1q 50
@@ -409,6 +446,7 @@ passive-interface gig0/2.50
 passive-interface gig0/2.60
 passive-interface gig0/2.70
 auto-cost reference-bandwidth 1000
+area 0 authentication message-digest
 exit
 
 
