--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -121,33 +121,7 @@ ena
 conf t
 hostname SITE1x0
 
-#Portok
-int Se0/3/0
-ip add 40.0.0.2 255.255.255.240
-ip ospf message-digest-key 1 md5 cisco
-ip nat outside
-no sh
-int g0/0
-ip add 192.168.1.241 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
-ip nat inside
-no sh
-int g0/1
-ip add 192.168.1.249 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
-ip nat inside
-no sh
-exit
-
-
 #FORGALOMIRÁNYÍTÁS
-router ospf 1
-network 192.168.1.240 0.0.0.3 area 0
-network 192.168.1.248 0.0.0.3 area 0
-default-information originate
-auto-cost reference-bandwidth 1000
-area 0 authentication message-digest
-exit
 ip route 0.0.0.0 0.0.0.0 40.0.0.1
 
 #NAT
@@ -159,166 +133,43 @@ access-list 1 permit 192.168.1.48 0.0.0.15
 access-list 1 permit 192.168.1.64 0.0.0.7
 access-list 1 permit 192.168.1.72 0.0.0.7
 access-list 1 permit 192.168.1.80 0.0.0.7
-
-
-
-
-#SITE1x1
-ena
-conf t
-hostname SITE1x1
+access-list 1 permit 
+access-list 1 permit
+access-list 1 permit
 
 #Portok
-int g0/0
-ip add 192.168.1.245 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
+int g0/0 
 no sh
-int g0/2
-ip add 192.168.1.242 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
-no sh
-exit
-
-#HSRP
-int g0/1
-ip ospf message-digest-key 1 md5 cisco
-no sh
-int g0/1.10
+int g0/0.10
 encapsulation dot1q 10
-ip add 192.168.1.2 255.255.255.224
-standby version 2
-standby 10 ip 192.168.1.1
-int g0/1.20
+ip add 192.168.1.1 255.255.255.224
+int g0/0.20
 encapsulation dot1q 20
-ip add 192.168.1.34 255.255.255.240
-standby version 2
-standby 20 ip 192.168.1.33
-int g0/1.30
+ip add 192.168.1.33 255.255.255.240
+int g0/0.30
 encapsulation dot1q 30
-ip add 192.168.1.66 255.255.255.248
-standby version 2
-standby 30 ip 192.168.1.65
-int g0/1.40
+ip add 192.168.1.65 255.255.255.248
+int g0/0.40
 encapsulation dot1q 40
-ip add 192.168.1.50 255.255.255.240
-standby version 2
-standby 40 ip 192.168.1.49
-int g0/1.2
-encapsulation dot1q 2
-ip add 192.168.1.82 255.255.255.248
-standby version 2
-standby 2 ip 192.168.1.81
-int g0/1.3
+ip add 192.168.1.49 255.255.255.240
+int g0/0.3
 encapsulation dot1q 3
 ip add 192.168.1.74 255.255.255.248
-standby version 2
-standby 3 ip 192.168.1.73
-
-#FORGALOMIRÁNYÍTÁS
-router ospf 1
-network 192.168.1.240 0.0.0.3 area 0
-network 192.168.1.244 0.0.0.3 area 0
-network 192.168.1.0 0.0.0.31 area 0
-network 192.168.1.32 0.0.0.15 area 0
-network 192.168.1.48 0.0.0.15 area 0
-network 192.168.1.64 0.0.0.7 area 0
-network 192.168.1.72 0.0.0.7 area 0
-network 192.168.1.80 0.0.0.7 area 0
-passive-interface gig0/1.10
-passive-interface gig0/1.20
-passive-interface gig0/1.30
-passive-interface gig0/1.40
-passive-interface gig0/1.2
-passive-interface gig0/1.3
-area 0 authentication message-digest
-auto-cost reference-bandwidth 1000
-exit
-
-
-
-
-#SITE1x2
-ena
-conf t
-hostname SITE1x2
-
-#Portok
-int g0/0
-ip add 192.168.1.246 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
-no sh
-int g0/2
-ip add 192.168.1.250 255.255.255.252
-ip ospf message-digest-key 1 md5 cisco
-no sh
-exit
-
-#HSRP
-int g0/1
-ip ospf message-digest-key 1 md5 cisco
-no sh
-int g0/1.10
-encapsulation dot1q 10
-ip add 192.168.1.3 255.255.255.224
-standby version 2
-standby 10 ip 192.168.1.1
-int g0/1.20
-encapsulation dot1q 20
-ip add 192.168.1.35 255.255.255.240
-standby version 2
-standby 20 ip 192.168.1.33
-int g0/1.30
-encapsulation dot1q 30
-ip add 192.168.1.67 255.255.255.248
-standby version 2
-standby 30 ip 192.168.1.65
-int g0/1.40
-encapsulation dot1q 40
-ip add 192.168.1.51 255.255.255.240
-standby version 2
-standby 40 ip 192.168.1.49
-int g0/1.2
-encapsulation dot1q 2
-ip add 192.168.1.83 255.255.255.248
-standby version 2
-standby 2 ip 192.168.1.81
-int g0/1.3
-encapsulation dot1q 3
-ip add 192.168.1.75 255.255.255.248
-standby version 2
-standby 3 ip 192.168.1.73
-
-#FORGALOMIRÁNYÍTÁS
-router ospf 1
-network 192.168.1.244 0.0.0.3 area 0
-network 192.168.1.248 0.0.0.3 area 0
-network 192.168.1.0 0.0.0.31 area 0
-network 192.168.1.32 0.0.0.15 area 0
-network 192.168.1.48 0.0.0.15 area 0
-network 192.168.1.64 0.0.0.7 area 0
-network 192.168.1.72 0.0.0.7 area 0
-network 192.168.1.80 0.0.0.7 area 0
-passive-interface gig0/1.10
-passive-interface gig0/1.20
-passive-interface gig0/1.30
-passive-interface gig0/1.40
-passive-interface gig0/1.2
-passive-interface gig0/1.3
-auto-cost reference-bandwidth 1000
-area 0 authentication message-digest
-exit
-
-
-
-
-
+int g0/0.4
+encapsulation dot1q 4
+ip add 
+int g0/0.5
+encapsulation dot1q 5
+ip add 
+int g0/0.6
+encapsulation dot1q 6
+ip add 
 
 
 #SITE2x0
 ena
 conf t
 hostname SITE2x0
-do wr
 
 #Portok
 int Se0/3/0
@@ -565,11 +416,11 @@ switchport access vlan 70
 
 
 #SW3
-
-#Portok
-
 ena
 conf t
+hostname SW3
+
+#Portok
 vlan 70
 name Teszteles
 exit
@@ -585,8 +436,6 @@ exit
 
 
 
-
-
 #SW1x1
 ena
 conf t
@@ -599,12 +448,18 @@ vtp mode server
 vtp version 2
 
 #Portok
+Int g0/1
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
+switchport trunk native vlan 99
+Int g0/2
+switchport mode access
+switchport access vlan 30
 int fa0/1
 switchport mode access
-switchport access vlan 2
-int fa0/2
-switchport mode access
-switchport access vlan 3
+switchport access vlan 6
+exit
+
 
 
 #Vlanok
@@ -618,19 +473,23 @@ vlan 40
 name Rendszergazda
 vlan 3
 name Szerverszoba
-vlan 2
-name Management1
+vlan 4
+name Voice
+vlan 5
+name Recepcio
+vlan 6
+name Nyomtatok
 
 #Etherchannel
 int range fa0/22-24
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 2 mode active
 
 int range fa0/19-21
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 1 mode active
 
@@ -647,28 +506,35 @@ vtp domain cisco
 vtp password cisco
 
 #Portok
-int range fa0/1-14
-switchport mode access
-switchport access vlan 20
 int g0/1
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
-switchport trunk native vlan 99
-int g0/2
 switchport mode access
 switchport access vlan 10
 exit
+int g0/2
+switchport mode access
+switchport access vlan 20
+exit
+int fa0/1
+switchport mode access
+switchport access vlan 6
+exit
+int fa0/2
+switchport mode access
+switchport access vlan 5
+switchport voice vlan 4
+exit
+
 
 #Etherchannel
 int range fa0/22-24
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 3 mode active
 
 int range fa0/19-21
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,2,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 1 mode active
 
@@ -686,37 +552,30 @@ vtp password cisco
 
 #Portok
 int g0/1
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
-switchport trunk native vlan 99
-exit
-int g0/2
 switchport mode access
 switchport access vlan 40
-exit
-int range fa0/1-6
+int fa0/1
 switchport mode access
-switchport access vlan 30
+switchport access vlan 40
+int fa0/2
+switchport mode access
+switchport access vlan 6
+int fa0/3
+switchport mode access
+switchport access vlan 3
 exit
 
 #Etherchannel
 int range fa0/22-24
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 3 mode active
 
 int range fa0/19-21
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
 switchport trunk native vlan 99
 channel-group 2 mode active
-
-
-
-
-
-
-
 
 
